--- a/Responsive_Redesign.html
+++ b/Responsive_Redesign.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/cleanup.css">
+    <link rel="stylesheet" href="style/responsive_redesign.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <body>
       <div class="header">
@@ -15,7 +15,7 @@
           </div>
         </div>
       </div>
-      <div style="height: 60vh; background-color: #3CD2F9" id = "home">
+      <div style="height: 70vh; background-color: #503225" id = "home">
         <div class="spacing" style="height: 30vh;"></div>
         <div class="intro" style="align-items: center; width: 49%; margin-left: 15%; color: white; font-family: DM Sans, sans-serif">
           <p style="color: white; font-size: 10vh; width: 50%; font-family: DM Sans, sans-serif">
@@ -24,38 +24,39 @@
           </p>
         </div>
       </div>
-      <div style="height: 30vh; background-image: linear-gradient(#3CD2F9, white);"></div>
-      <div class="spacing" style="height: 20vh;" id = "projects"></div>
-      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
-        <h1 style="color: black; font-size: 6vh; font-family: DM Sans, sans-serif" data-aos="fade-in">Context</h1>
-        <p style="color: black; font-size: 3vh; width: 80%; margin-left: 10%; text-align: left;">
-          Bagel Gourmet is a community staple among the Brown University community. When the dining halls are unavailable,
-          students flock to get bagels for breakfast. However, when looking for its website, not only do we get an entirely unappealing site:
-          We get one that is actively difficult to navigate. Everything is in an awkward location, the color scheme is cold and uninviting, 
-          there is no accessibility support, and it looks "old". From an accessibility standpoint, it fails with regards to translatability and accessibility for 
-          the visually impaired due to its small text.
-        </p>
+      <div style="height: 50vh; background-image: linear-gradient(#503225, white);"></div>
+      <div style="text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in" id="context">
+        <h1 class="head" data-aos="fade-in">Context</h1>
+          <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin-left: 7%; text-align: left; background-color: #4d2e20; border-radius: 10px; padding: 1%;">
+            <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+              Bagel Gourmet is a community staple among the Brown University community. When the dining halls are unavailable,
+              students flock to get bagels for breakfast. However, when looking for its website, not only do we get an entirely unappealing site:
+              We get one that is actively difficult to navigate. Everything is in an awkward location, the color scheme is cold and uninviting, 
+              there is no accessibility support, and it looks "old". From an accessibility standpoint, it fails with regards to translatability and accessibility for 
+              the visually impaired due to its small text.
+            </div>
+          </div>
         <br><br><br>
       </div>
       <br><br><br>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
-        <br>
-        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Getting Started</h1>
+        <h1 class="head" data-aos="fade-in">Getting Started</h1>
         <br>
         <div style="display: flex;">
           <br>
-          <p style="color: black; font-size: 3vh; width: 60%; text-align: left; margin-left: 10%;">
-            <br>
-            For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
-            the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
-            since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes<br>
-          </p>
+          <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 60%; margin-left: 7%; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
+            <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+              For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
+              the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
+              since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes
+            </div>
+          </div>
           <div>
-            <div class="box" style="padding-top: 1vh;">
+            <div class="box" style="padding-top: 1vh; padding-bottom: 2vh;">
               <a href = "http://bagelgourmetcafe.com/">
                 <img src="bgo.png" style="width: 60%; border-radius: 25px; z-index: 2"><br></div>
               </a>
-              Link to original site
+              <div style="color: gray; ">Link to original site</div>
           </div>
         </div>
         <br><br><br><br>
@@ -63,16 +64,14 @@
       <br id = "Initial Designs"><br><br>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: wblackhite; text-align: center; font-size: 12vh;" data-aos="fade-in">Initial Designs</h1>
-        <br>
-        <div style="display: flex;">
-          <br>
-          <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
+        <h1 style="color: wblackhite; text-align: center;" data-aos="fade-in">Initial Designs</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin-left: 7%; text-align: left; background-color: #4d2e20; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
             There were two halves to what I wanted to do with this project. The first was to clean up this website completely, removing
             superflours content. This essentially meant simplifying a lot of the format. To do so, I added a menu bar with larger text,
             and used images of the bagels to emphasize the actual selling point of the buisness. The second was to make it responsive to different web formats. 
             In order to do so, I developed a low fi design for each format: Web, Mobile, and Tablet:
-          </p>
+          </div>
         </div>
         <br>
         <h1>Website Design:</h1>
@@ -93,13 +92,15 @@
       <br id = "Hi Fi"><br><br>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Hi-Fi Prototype</h1>
-        <br>
-        <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
-          Following the initial designs, I decided to put together a high fidelity prototype. This involved 
-          creating a visual style guide for the site, then putting together a Figma prototype of the site itself.
-          Like above, I made a different version of these prototypes for the web, mobile, and tablet. Click on anything
-          below to visit these.
+        <h1 data-aos="fade-in">Hi-Fi Prototype</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+            For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
+            the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
+            since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes
+          </div>
+        </div>
+        <p style="color: black; font-size: 3vh;text-align: left; margin: auto;">
           <br><br>
           <h1>Visual Design Guide</h1>
           <div class="box">
@@ -114,15 +115,15 @@
             </a>
           </div>
           <h1>Mobile and Tablet Page:</h1>
-          <div style="display: flex; text-align: center;  ">
+          <div style="display: flex; text-align: center; margin: auto; width: 100%;">
             <div class="box">
               <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A156&scaling=min-zoom&page-id=4%3A38">
-                <img src="home_page_tablet.png" style="width: 78.5%; border-radius: 50px; z-index: 2; padding: 3vh;">
+                <img src="home_page_tablet.png" style="width: 20vw; border-radius: 50px;">
               </a>
             </div>
             <div class="box">
               <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=119%3A157&scaling=min-zoom&page-id=4%3A38">
-                <img src="mobile_page.png" style="width: 90%; border-radius: 50px; z-index: 2; padding: 3vh;">
+                <img src="mobile_page.png" style="width: 31vw; border-radius: 50px;">
               </a>
             </div>
           </div>
@@ -130,36 +131,49 @@
       <br><br id = "Wrap Up"><br><br>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Wrapup</h1>
+        <h1 class="head" data-aos="fade-in">Wrapup</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+            Following the prototyping process, the next step was to put together a redesigned version of the website.
+            This redesign was done exclusively in HTML/CSS/Javascript, in an effort to attempt to use basic elements.
+          </div>
+        </div>
+        <div style="height: 2vh;"></div>
+        <div class="box">
+          <a href="https://sleepypuppy404.github.io/responsive_redesign_site/">
+            <img src="responsive_redesign.png" style="width: 70%; border-radius: 50px; z-index: 2; padding: 2vh;">
+          </a>
+        </div>
+      </div>
+      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <h1 class="head" data-aos="fade-in">Takeaways</h1>
         <br>
-        <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
-          Following this, I put together a website based on this, which is linked below:
-            <div class="box">
-              <a href="https://sleepypuppy404.github.io/responsive_redesign_site/">
-                <img src="responsive_redesign.png" style="width: 90%; border-radius: 50px; z-index: 2; padding: 2vh;">
-              </a>
-            </div>
-            <h1>Takeaways</h1>
-            <div style="display: flex; margin-left: 6%; margin-right: 6%;">
-              <div>
-                <h2>Lessons Learnt</h2>
-                <ul style="text-align: left;">
-                  <li>Proper preparation work makes coding the website easier</li>
-                  <li>Color scheme can make or break the design of a website</li>
-                  <li>A visual design guide makes prototyping more organized</li>
-                </ul>
-              </div>
-              <div style="margin-left: 19vh;">
-                <h2>Insights</h2>
-                <ul style="text-align: left;">
-                  <li>Brown works really nicely with lighter colors</li>
-                  <li>Cafes as a whole either use a light fall asthetic or a darker green one</li>
-                  <li>Sidemenus can be really tricky to implement as a whole.</li>
-                </ul>
+        <div style="display: flex;">
+          <br>
+          <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
+            <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+              <div style="display: flex; margin-left: 6%; margin-right: 6%;">
+                <div style="width: 100%;">
+                  <h2>Lessons Learnt</h2>
+                  <ul style="text-align: left;">
+                    <li>Proper preparation work makes coding the website easier</li>
+                    <li>Color scheme can make or break the design of a website</li>
+                    <li>A visual design guide makes prototyping more organized</li>
+                  </ul>
+                </div>
+                <div style="margin-left: 19vh;">
+                  <h2>Insights</h2>
+                  <ul style="text-align: left;">
+                    <li>Brown works really nicely with lighter colors</li>
+                    <li>Cafes as a whole either use a light fall asthetic or a darker green one</li>
+                    <li>Sidemenus can be really tricky to implement as a whole.</li>
+                  </ul>
+                </div>
               </div>
             </div>
-
-        <br>   
+          </div>
+        </div>
+        <br><br><br><br>
       </div>
       
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
