--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
       </div>
       <div style="height: 60vh; background-color: #3CD2F9" id = "home">
-        <div class="spacing" style="height: 30vh;"></div>
-        <div class="intro" style="align-items: center; width: 49%; margin-left: 15%; color: white; font-family: DM Sans, sans-serif">
+        <div class="spacing" style="height: 31vh;"></div>
+        <div class="intro" style="align-items: center; width: 55vw; margin-left: 15%; color: white; font-family: DM Sans, sans-serif">
            <!--Note to self. Clean up these animations later.-->
           <h1 style="padding-bottom: 1%">I'm SleepyPuppy404</h1>
           <h2 style="margin-left: 0%;">Welcome to my Portfolio</h2>
@@ -48,7 +48,7 @@
             we created was a voice recognition note taking software for doctors.
           </p>
           <br>
-          <button class="btn">Visit Me!</button>
+          <button class="btn" onclick="window.location.href='Iterative_Design.html'">Visit Me!</button>
         </div>
         <img class = "portfolio_link" src="images/homepage/knowtex.png"></img>
       </div>
