--- a/Responsive_Redesign.html
+++ b/Responsive_Redesign.html
@@ -24,9 +24,11 @@
           </p>
         </div>
       </div>
-      <div style="height: 50vh; background-image: linear-gradient(#503225, white);"></div>
-      <div style="text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in" id="context">
-        <h1 class="head" data-aos="fade-in">Context</h1>
+      <div style="height: 50vh; background-image: linear-gradient(#503225, white);">
+      </div>
+      <br id="context"><br><br><br>
+      <div style="text-align: center; width: 80%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <h1 class="head" data-aos="fade-in" style="text-align: center; font-size: 9vh;">Context</h1>
           <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin-left: 7%; text-align: left; background-color: #4d2e20; border-radius: 10px; padding: 1%;">
             <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
               Bagel Gourmet is a community staple among the Brown University community. When the dining halls are unavailable,
@@ -39,13 +41,13 @@
         <br><br><br>
       </div>
       <br><br><br>
-      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+      <div style="color: black; text-align: center; width: 80%; margin: auto;" class="boxthing" data-aos="fade-in">
         <h1 class="head" data-aos="fade-in">Getting Started</h1>
         <br>
         <div style="display: flex;">
           <br>
-          <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 60%; margin-left: 7%; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
-            <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+          <div style="font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 60%; margin-left: 7%; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%; display: flex;">
+            <div style="border-radius: 10px; padding: 4%  ; border: 10px solid white;">
               For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
               the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
               since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes
@@ -54,7 +56,7 @@
           <div>
             <div class="box" style="padding-top: 1vh; padding-bottom: 2vh;">
               <a href = "http://bagelgourmetcafe.com/">
-                <img src="bgo.png" style="width: 60%; border-radius: 25px; z-index: 2"><br></div>
+                <img src="images/redesign/bgo.png" style="width: 60%; border-radius: 25px; z-index: 2"><br></div>
               </a>
               <div style="color: gray; ">Link to original site</div>
           </div>
@@ -62,10 +64,10 @@
         <br><br><br><br>
       </div>
       <br id = "Initial Designs"><br><br>
-      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+      <div style="color: black; text-align: center; width: 80vw; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: wblackhite; text-align: center;" data-aos="fade-in">Initial Designs</h1>
-        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin-left: 7%; text-align: left; background-color: #4d2e20; border-radius: 10px; padding: 1%;">
+        <h1 data-aos="fade-in">Initial Designs</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin-left: auto; margin-right: auto; text-align: left; background-color: #4d2e20; border-radius: 10px; padding: 1%;">
           <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
             There were two halves to what I wanted to do with this project. The first was to clean up this website completely, removing
             superflours content. This essentially meant simplifying a lot of the format. To do so, I added a menu bar with larger text,
@@ -74,19 +76,19 @@
           </div>
         </div>
         <br>
-        <h1>Website Design:</h1>
-        <img src="images/redesign/website_1.png" style="width: 24.7%; border-radius: 30px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/website_2.png" style="width: 25%; border-radius: 30px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/website_3.png" style="width: 25%; border-radius: 30px; z-index: 2; padding: 3vh;">
-        <h1>Tablet Design:</h1>
-        <img src="images/redesign/tablet_1.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/tablet_2.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/tablet_3.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
-        <h1>Phone Design:</h1>
-        <img src="images/redesign/phone_1.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/phone_2.png" style="width: 18.1%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/phone_3.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/phone_4.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
+        <h2 style="margin-top: 5vh;">Website Design</h1>
+        <img src="images/redesign/website_1.png" style="width: 20vw; border-radius: 15px; margin-right: 3vw;">
+        <img src="images/redesign/website_2.png" style="width: 20vw; border-radius: 15px; margin-right: 3vw;">
+        <img src="images/redesign/website_3.png" style="width: 20vw; border-radius: 15px; margin-right: 3vw;">
+        <h2 style="margin-top: 3vh;">Tablet Design</h1>
+        <img src="images/redesign/tablet_1.png" style="width: 20vw; border-radius: 15px; margin-right: 3vw;">
+        <img src="images/redesign/tablet_2.png" style="width: 20vw; border-radius: 15px; margin-right: 3vw;">
+        <img src="images/redesign/tablet_3.png" style="width: 20vw; border-radius: 15px; margin-right: 3vw;">
+        <h2 style="margin-top: 5vh;">Phone Design</h1>
+        <img src="images/redesign/phone_1.png" style="width: 18%; border-radius: 30px; z-index: 2; margin-right: 2vw;">
+        <img src="images/redesign/phone_2.png" style="width: 18.1%; border-radius: 30px; z-index: 2; margin-right: 2vw;">
+        <img src="images/redesign/phone_3.png" style="width: 18%; border-radius: 30px; z-index: 2; margin-right: 2vw;">
+        <img src="images/redesign/phone_4.png" style="width: 18%; border-radius: 30px; z-index: 2; margin-right: 2vw;">
         <br><br><br><br>
       </div>
       <br id = "Hi Fi"><br><br>
@@ -100,38 +102,37 @@
             since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes
           </div>
         </div>
-        <p style="color: black; font-size: 3vh;text-align: left; margin: auto;">
-          <br><br>
-          <h1>Visual Design Guide</h1>
+          <h2 style="margin-top: 5vh;">Visual Design Guide</h1>
           <div class="box">
             <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A154&scaling=min-zoom&page-id=0%3A1">
-              <img src="visualstyledesignguide.png" style="width: 80%; border-radius: 50px; z-index: 2; padding: 3vh;">
+              <img src="images/redesign/visualstyledesignguide.png" style="width: 80%; border-radius: 50px;">
             </a>
           </div>
-          <h1>Website Prototype:</h1>
+          <h2 style="margin-top: 5vh;">Website Prototype:</h1>
           <div class="box">
             <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A155&scaling=min-zoom&page-id=4%3A38">
-              <img src="home_page.png" style="width: 80%; border-radius: 50px; z-index: 2; padding: 3vh;">
+              <img src="images/redesign/home_page.png" style="width: 80%; border-radius: 50px">
             </a>
           </div>
-          <h1>Mobile and Tablet Page:</h1>
-          <div style="display: flex; text-align: center; margin: auto; width: 100%;">
+          <br><br>
+          <h2 style="margin-top: 5vh;">Mobile and Tablet Page:</h1>
+          <div style="display: flex; text-align: center; margin-left: auto; margin-right: auto; width: 80%;">
             <div class="box">
               <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A156&scaling=min-zoom&page-id=4%3A38">
-                <img src="home_page_tablet.png" style="width: 20vw; border-radius: 50px;">
+                <img src="images/redesign/home_page_tablet.png" style="width: 20vw; border-radius: 50px; margin-right: 10vh;">
               </a>
             </div>
             <div class="box">
               <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=119%3A157&scaling=min-zoom&page-id=4%3A38">
-                <img src="mobile_page.png" style="width: 31vw; border-radius: 50px;">
+                <img src="images/redesign/mobile_page.png" style="width: 31vw; border-radius: 50px;">
               </a>
             </div>
           </div>
       </div>
       <br><br id = "Wrap Up"><br><br>
-      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+      <div style="color: black; text-align: center; width: 70%; margin-left: auto; margin-right: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 class="head" data-aos="fade-in">Wrapup</h1>
+        <h1 class="head" data-aos="fade-in" style="font-size: 9vh">Wrapup</h1>
         <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
           <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
             Following the prototyping process, the next step was to put together a redesigned version of the website.
@@ -145,16 +146,14 @@
           </a>
         </div>
       </div>
-      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
-        <h1 class="head" data-aos="fade-in">Takeaways</h1>
-        <br>
+      <div style="color: black; text-align: center; width: 70%; margin: auto; margin-top: 6vh;" class="boxthing" data-aos="fade-in">
+        <h2 class="head" data-aos="fade-in">Takeaways</h2>
         <div style="display: flex;">
-          <br>
-          <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
+          <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80vw; margin-left: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
             <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
-              <div style="display: flex; margin-left: 6%; margin-right: 6%;">
-                <div style="width: 100%;">
-                  <h2>Lessons Learnt</h2>
+              <div style="display: flex; margin-left: 6%; margin-right: 2%;">
+                <div style="width: 40vw">
+                  <h3>Lessons Learnt</h3>
                   <ul style="text-align: left;">
                     <li>Proper preparation work makes coding the website easier</li>
                     <li>Color scheme can make or break the design of a website</li>
@@ -162,7 +161,7 @@
                   </ul>
                 </div>
                 <div style="margin-left: 19vh;">
-                  <h2>Insights</h2>
+                  <h3>Insights Gained</h3>
                   <ul style="text-align: left;">
                     <li>Brown works really nicely with lighter colors</li>
                     <li>Cafes as a whole either use a light fall asthetic or a darker green one</li>
