--- a/Responsive_Redesign.html
+++ b/Responsive_Redesign.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <body>
       <div class="header">
-        <div class="header_format" >SleepyPuppy404</div>
+        <a href="index.html" style="color: white;"><div class="header_format">SleepyPuppy404</div></a>
           <div class="topnav">
             <a href="#context">Context</a>
             <a href="#Initial Designs">Initial Designs</a>
@@ -142,7 +142,7 @@
         <div style="height: 2vh;"></div>
         <div class="box">
           <a href="https://sleepypuppy404.github.io/responsive_redesign_site/">
-            <img src="responsive_redesign.png" style="width: 70%; border-radius: 50px; z-index: 2; padding: 2vh;">
+            <img src="images/redesign/site.png" style="width: 70%; border-radius: 50px; z-index: 2; padding: 2vh;">
           </a>
         </div>
       </div>
