--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <div class="header">
-        <div class="header_format">SleepyPuppy404</div>
+        <a href="index.html" style="color: white;"><div class="header_format">SleepyPuppy404</div></a>
           <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#projects">Projects</a>
@@ -28,7 +28,7 @@
       <h1 style="color: black; text-align: center; font-size: 12vh; font-family: DM Sans, sans-serif;" data-aos="fade-in">Projects</h1>
       <div class="spacing" style="height: 10vh;"></div>
       <div data-aos="fade-left" style="display: flex; width: 70%; margin-left: 15%;">
-        <img class = "portfolio_link" src="images/homepage/bagel_intro.png"></img>
+        <img class = "portfolio_link" src="images/homepage/bagel_intro.png" onclick="window.location.href='Responsive_Redesign.html'"></img>
         <div style="margin-top: 1%; display: flex; justify-content: center; flex-wrap: wrap;">
           <h1 style="font-size: 4vh; font-family: DM Sans, sans-serif">Responsive Redesign</h1>
           <p class = "link_par">
@@ -50,18 +50,18 @@
           <br>
           <button class="btn" onclick="window.location.href='Iterative_Design.html'">Visit Me!</button>
         </div>
-        <img class = "portfolio_link" src="images/homepage/knowtex.png"></img>
+        <img class = "portfolio_link" src="images/homepage/knowtex.png" onclick="window.location.href='Iterative_Design.html'"></img>
       </div>
       <div class="spacing" style="height: 10vh;"></div>
       <div data-aos="fade-left" style="display: flex; width: 70%; margin-right: 15%; margin-left: 15%;">
-        <img class = "portfolio_link" src="images/homepage/personas.png"></img>
+        <img class = "portfolio_link" src="images/homepage/personas.png" onclick="window.location.href='personas.html'"></img>
         <div style="margin-top: 1%; display: flex; justify-content: center; flex-wrap: wrap;">
           <h1 style="font-size: 4vh; font-family: DM Sans, sans-serif; margin-left: 40%; margin-right: 40%;">Personas</h1>
           <p class="link_par">
             In order to better familiarize myself with the process of user oriented design, I developed user personas for an ice cream machine.
           </p>
           <br>
-          <button class="btn">Visit Me!</button>
+          <button class="btn" onclick="window.location.href='personas.html'">Visit Me!</button>
         </div>
       </div>
       <div class="spacing" style="height: 10vh;"></div>
