--- a/personas.html
+++ b/personas.html
@@ -11,14 +11,15 @@
             <a href="#context">Context</a>
             <a href="#Initial Designs">Research</a>
             <a href="#Personas">Personas</a>
-            <a href="#Wrap Up">Wrap Up</a>
+            <a href="#Storyboard">Storyboard</a>
+            <a href="#Wrapup">Wrapup</a>
           </div>
         </div>
       </div>
       <div style="height: 70vh; background-color: #476A6F" id = "home">
         <div class="spacing" style="height: 30vh;"></div>
         <div class="merp" style="text-align: left; width: 60%; margin-left: 15%; color: white; font-family: DM Sans, sans-serif">
-            <h1 style="font-size: 9vh;">Project: Personas</h1>
+            <h1 style="font-size: 9vh;">Project: Personas/Storyboard</h1>
             <h2 style="font-size: 6vh;">The Sharpe Refactory Ice Cream Machine</h2>
         </div>
       </div>
@@ -88,13 +89,90 @@
           </div>
       </div>
       <br id = "Personas"><br><br>
-      <div style="color: black; text-align: center; width: 80vw; margin: auto;" class="boxthing" data-aos="fade-in">
+      <div style="color: black; text-align: center; width: 80%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <h1 class="head" data-aos="fade-in" >Personas</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
+            <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+                After doing this research on users, the next step were to construct personas: Essentially slightly exaggerated
+                charicatures of real users, that help interface designers create better products and consider their users.
+                To build these personas, I drew on the research I did above to create the following two characters:
+            </div>
+        </div>
+        <h2>Persona 1: Stressed Matt</h2>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+            Stressed Matt was meant to be a representative of half the interviewees. Since a few were student athletes, it was important to factor this in along with student stress.
+            Finally, I wanted this character to be busy, as many of the student body is when at the sharpe refactory.
+          </div>
+        </div>
+        <div style="overflow : scroll; height: 70vh; overflow-x: hidden; border: 15px #476A6F solid; border-radius: 15px; margin: auto;">
+          <img src="images/personas/enmap1v2.png">
+        </div>
+        <h2 style="margin-top: 5vh;">Persona 2: Dissapointed John</h2>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+            John, on the other hand, was meant to be represenative of the harsh reality of the dining hall food. One of the harshest experiences of a student's freshman year
+            is going to the Sharpe Refactory, and experiencing the university dining experience. As this is a nearly universal part of being a college student at brown and thus utilizing
+            this ice cream machine, I felt it was essential to mention in the persona.
+          </div>
+        </div>
+        <div style="overflow : scroll; height: 70vh; overflow-x: hidden; border: 15px #476A6F solid; border-radius: 15px; margin: auto;">
+          <img src="images/personas/enamp1.png">
+        </div>
       </div>
-      
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+      <br id = "Storyboard"><br><br>
+      <div style="color: black; text-align: center; width: 80%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <h1 class="head" data-aos="fade-in">Storyboard</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
+            <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+              After finishing up the final Persona, the final step was to create a storyboard describing the user experience. The goal of this was to provide an
+              authentic, emotional, simple, and humerous story showcasing what the experience was like. 
+            </div>
+        </div>
+        <h2>Storyboard: Stressed Matt's Quest</h2>
+          <img src="images/personas/storyboard.png" style="width: 80%; border: 15px #476A6F solid; border-radius: 15px; margin: auto;">
+      </div>
+      <br id = "Wrapup"><br><br>
+      <div style="color: black; text-align: center; width: 80%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <h1 class="head" data-aos="fade-in">Wrapup</h1>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+              <div style="display: flex; margin-left: 6%; margin-right: 2%;">
+              This project was extremely useful in teaching one how to perform user research and incorporate user feedback. In order to successfully complete it,
+              it required me to step out of my confort zone and attempt to awkwardly breach the topic of the ice cream machine functionality. However, with the 
+              Storyboard and Empathy Maps completed, the project was finished.
+              </div>
+          </div>
+        </div> 
+        <h2>Takeaways</h2>  
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+              <div style="display: flex; margin-left: 6%; margin-right: 2%;">
+                <div style="width: 40vw">
+                  <h3>Lessons Learnt</h3>
+                  <ul style="text-align: left;">
+                    <li>A lot can be gained from user observation</li>
+                    <li>Many users are happy to give feedback, especially when they are frustrated</li>
+                    <li>A lot of information can be gained by putting yourself in the users position mentally.</li>
+                  </ul>
+                </div>
+                <div style="margin-left: 19vh;">
+                  <h3>Insights Gained</h3>
+                  <ul style="text-align: left;">
+                    <li>Lucidchart is great at developing easy graphics</li>
+                    <li>Interviews can be extremely useful to consider different perspectives</li>
+                    <li>Planning out a rough version before developing the final iteration is extremely time saving later.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
     </body>  
 </html> 
 
