--- a/Iterative_Design.html
+++ b/Iterative_Design.html
@@ -10,7 +10,7 @@
           <div class="topnav">
             <a href="#context">Context</a>
             <a href="#Initial Designs">Initial Designs</a>
-            <a href="#Hi Fi">Hi Fi Design</a>
+            <a href="#Hi Fi">Iterative Design</a>
             <a href="#Wrap Up">Wrap Up</a>
           </div>
         </div>
@@ -162,7 +162,7 @@
         </div>
       </div>
       <br id = "Hi Fi"><br><br>
-      <div style="color: black; text-align: center; width: 80%; margin: auto;" class="boxthing" data-aos="fade-in">
+      <div style="color: black; text-align: center; width: 80%; margin: auto; margin-top: 10vh;" class="boxthing" data-aos="fade-in">
         <br>
         <h1 data-aos="fade-in">Iterative Design Process</h1>
         <h2>Prototype 1</h2>
@@ -280,6 +280,29 @@
               <li>Give more task confirmation</li>
               <li>Simplify the interface overall.</li>
             </ol>
+          </div>
+        </div>
+        <h2 style="margin-top: 5vh;">Lessons Learnt</h2>
+        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #6e2881; border-radius: 10px; padding: 1%;">
+          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
+            <div style="display: flex; margin-left: 6%; margin-right: 2%;">
+              <div style="width: 40vw">
+                <h3>Lessons Learnt</h3>
+                <ul style="text-align: left;">
+                  <li>Figma Mockups are far more complex than basic photoshop</li>
+                  <li>Design decisions can be arbitrary at times</li>
+                  <li>Not every bit of feedback is objectively correct</li>
+                </ul>
+              </div>
+              <div style="margin-left: 19vh;">
+                <h3>Insights Gained</h3>
+                <ul style="text-align: left;">
+                  <li>Working with teammates requires far more coordination than working alone</li>
+                  <li>Clutter can be a major issue when it comes to interface design</li>
+                  <li>Sometimes it is impossible to make something quickly learnable. </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
