--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             that provided and aggregated information on dogs and helped potential dog owners get a sense as to the work required to own a specific dog.
           </p>
           <br>
-          <button class="btn">Visit Me!</button>
+          <button class="btn" onclick="window.location.href='React.html'">Visit Me!</button>
         </div>
-        <img class = "portfolio_link" src="images/homepage/react_app.png"></img>
+        <img class ="portfolio_link" src="images/homepage/react_app.png" onclick="window.location.href='React.html'"></img>
       </div>
       <div class="spacing" style="height: 10vh;"></div>
       <script>
