--- a/Iterative_Design.html
+++ b/Iterative_Design.html
@@ -261,25 +261,10 @@
             we decided to share the prototype with the actual startup, and got this response:
           </div>
         </div>
-        <h2 style="margin-top: 5vh;">Testing Videos</h2>
-        <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 90%; margin: auto; text-align: left; background-color: #6e2881; border-radius: 10px; padding: 1%;">
-          <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
-            <video style="width: 20vw; border-radius: 15px; margin-right: 2.5%;"controls><source src="images/iterative_design/videos/user1 video.mp4" type="video/mp4"></video>
-            <video style="width: 20vw; border-radius: 15px; margin-right: 2.5%;"controls><source src="images/iterative_design/videos/user2 video.mp4" type="video/mp4"></video>
-            <video style="width: 20vw; border-radius: 15px;"controls><source src="images/iterative_design/videos/user2 video.mp4" type="video/mp4"></video>
-          </div>
-        </div>
-        <h2 style="margin-top: 5vh;">User Feedback</h2>
+        <br><br><br>
         <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #6e2881; border-radius: 10px; padding: 1%;">
           <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
-            After receiving the feedback, here are the changes recommended for the next iteration.
-            <ol style="width: 70%; margin: auto; margin-top: 3vh;  margin-bottom: 3vh; margin-left: 30%;">
-              <li>Make page locations more intuitive</li>
-              <li>Bold less items, as it can be distracting</li>
-              <li>Interface not intuitive for first time users</li>
-              <li>Give more task confirmation</li>
-              <li>Simplify the interface overall.</li>
-            </ol>
+            <img src="images/iterative_design/founder.png" style="width: 100%; border-radius: 15px;">
           </div>
         </div>
         <h2 style="margin-top: 5vh;">Lessons Learnt</h2>
